@@ -4,6 +4,7 @@
         <div class="col-md-12">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
                 <h4> Projects </h4>
+                <?php if ($isAdmin === 1) : ?>
                 <div class="btn-toolbar float-end">
                   <div class="btn-group me-2">
                       <button data-toggle="tooltip" data-bs-placement="bottom" title="Create Project" class="btn btn-primary" id="createProject">
@@ -11,6 +12,7 @@
                       </button>
                   </div>
                 </div>
+                <?php endif; ?>
             </div>
         </div>
     </div>
