@@ -5,6 +5,7 @@ Changed
     Resize terminal on window resize
     Upgrade to bootstrap 5
     Remove operations from sidebar that are complete / failed older than 5 minutes (#407)
+    Only admins can create projects (#429)
 
 Fixed
     First run doesn't toggle passwords properly (#390)
